tests/rt/pos/ifc/declenoughauthority.trp
let val x = 42 raisedTo {alice}
    val y = declassify (x, authority, {} )
in y 
end