tests/rt/neg/ifc/raisetrust02.trp
raiseTrust ("YYY", attenuate (authority, {alice}), {alice}) 
